dev: workarounds to fix border overflow in item details table and miasalignment of music page context menu

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1290,8 +1290,13 @@ progress+span {
 @supports(display:revert) {
     .itemDetailsGroup {
         outline: var(--defaultBorder);
-        outline-offset: calc(-1*var(--borderWidth));
+        outline-offset: calc(-1 * var(--borderWidth));
         border: none;
+    }
+
+    /* this somehow fixes border overflow on mobile */
+    .layout-mobile .itemDetailsGroup {
+        outline-offset: calc(-1 * var(--borderWidthDouble));
     }
 }
 
@@ -1511,7 +1516,7 @@ progress+span {
 }
 
 .dialogContainer:has([data-id="editlyrics"]) {
-    top: -1.75em;
+    /* top: -1.75em; */
 }
 
 .subtitleEditor-dropZone,
